Update Rock VS Mine Prediction.ipynb

--- a/Rock VS Mine Prediction.ipynb
+++ b/Rock VS Mine Prediction.ipynb
@@ -1422,7 +1422,7 @@
    "source": [
     "x_test_prediction = model.predict(x_test)\n",
     "training_data_accuracy_test = accuracy_score(y_test, x_test_prediction)\n",
-    "print('Accuracy on training data: ', training_data_accuracy_test)"
+    "print('Accuracy on testing data: ', training_data_accuracy_test)"
    ]
   },
   {
